[package]
name = "currency_convert"
version = "0.1.0"
authors = ["Benjamin Goodman <b@thebgoodman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
hyper = "0.13"
serde = { version = "1.0.111", features = ["derive"] }
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"